k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: targeting-service
  labels:
    app: targeting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      containers:
        - name: targeting-service
          image: 103568492404.dkr.ecr.us-east-1.amazonaws.com/toggle-master-dev/targeting-service:b1d3abb01a84174ef5ca671eb747c0a9993da2dc
          ports:
            - containerPort: 8003
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 10
